Contact section, refactor about me

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://maeryska.com">
     <meta name="twitter:card" content="summary_large_image">
     <link rel="canonical" href="https://maeryska.com/">
-    <title>Maeryska - Composer & Pianist | Classical, Fantasy & Cinematic Music</title>
+    <title>Maeryska - Composer, Pianist & Software engineer </title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=IM+Fell+English+SC&display=swap" rel="stylesheet">
@@ -76,17 +76,25 @@
                 <div class="about-text">
                     <h2 id="about-heading">Meet Maeryska</h2>
                     <p>
+                        <i class="fas fa-music about-icon" aria-hidden="true"></i>
                         Maeryska is a pianist turned musical storyteller, whose journey began at sixteen with his first band, <em>Phoenix in Fire</em>. Since then, he has performed with multiple bands and explored a wide range of genres—from orchestral fantasy to cinematic soundscapes—all shaped by his deep emotional range and love for narrative-driven music.
                     </p>
                     <p>
-                        Proficient in piano, keyboards, and a variety of flutes, Maeryska brings his musical visions to life through both live instrumentation and digital composition. His pieces are rooted in real-life experiences, yet rise into mythical and fantastical realms—reflecting a constant clash between raw emotion and a deeply analytical mind.
+                        <i class="fas fa-palette about-icon" aria-hidden="true"></i>
+                        Maeryska crafts sound like a painter with light—his hands fluent in piano, keyboards, and wind-carved flutes. Each composition emerges from the marrow of real moments, then drifts into realms of myth and wonder, where emotion swells and reason quietly shapes the storm.
                     </p>
                     <p>
-                        With a Master’s degree in Software Engineering, he seamlessly blends the logic of technology with the chaos of creativity.
+                        <i class="fas fa-star about-icon" aria-hidden="true"></i>
+                        With a Master’s degree in Software Engineering, he seamlessly blends the logic of technology with the chaos of creativity. Maeryska completely mixes and masters his music, maintaining full artistic control from conception to final production.
                     </p>
+                     <blockquote class="about-quote">
+                    “Dwell on the beauty of life. Watch the stars, and see yourself running with them.”
+                    <footer>— Marcus Aurelius</footer>
+                </blockquote>
                 </div>
             </div>
         </section>
+
         <section id="music" class="section music-section" aria-labelledby="music-heading">
             <h2 id="music-heading">Music</h2>
             <p class="section-subtext">Listen to original compositions and performances by Maeryska.</p>
@@ -120,21 +128,29 @@
                 </div>
             </div>
         </section>
+
         <section id="contact" class="section" aria-labelledby="contact-heading">
             <div class="container">
                 <h2 id="contact-heading">Contact</h2>
                 <p class="section-subtext">Let’s connect — for collaborations, inquiries, or just to say hello.</p>
                 <form action="https://formsubmit.co/maeryskamusic@gmail.com" method="POST">
-                    <label for="name">Name</label>
-                    <input id="name" type="text" name="name" placeholder="Your Name" required>
-                    <label for="email">Email</label>
-                    <input id="email" type="email" name="email" placeholder="Your Email" required>
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input id="name" type="text" name="name" placeholder="Your Name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input id="email" type="email" name="email" placeholder="Your Email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
+                    </div>
                     <button type="submit">Send Message</button>
                 </form>
             </div>
         </section>
+
     </main>
 
     <footer>
