--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=IM+Fell+English+SC&display=swap" rel="stylesheet">
     <link rel="icon" href="img/icons/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="img/icons/apple-touch-icon.png">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SRX0DYB5G7"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-SRX0DYB5G7');
+    </script>
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
